k8s/base/blindspot-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blindspot-api
  namespace: blindspot-prod
  labels: { app: blindspot-api }
spec:
  replicas: 1
  selector:
    matchLabels: { app: blindspot-api }
  template:
    metadata:
      labels: { app: blindspot-api }
    spec:
      imagePullSecrets: [ { name: ogrodje-regcred } ]
      containers:
        - name: blindspot-api
          image: registry.ogrodje.si/otobrglez/blindspot:0.0.5
          ports: [ { containerPort: 7779 } ]
          args: [
            "server",
            "--postgres-host=$(POSTGRES_HOST)",
            "--postgres-port=$(POSTGRES_PORT)",
            "--postgres-user=$(POSTGRES_USER)",
            "--postgres-password=$(POSTGRES_PASSWORD)",
            "--postgres-db=$(POSTGRES_DB)"
          ]
          livenessProbe:
            httpGet:
              path: /grid
              port: 7779
            initialDelaySeconds: 45
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /grid
              port: 7779
            initialDelaySeconds: 20
            periodSeconds: 50
---
apiVersion: v1
kind: Service
metadata:
  name: blindspot-api
  namespace: blindspot-prod
spec:
  selector: { app: blindspot-api }
  ports:
    - port: 80
      targetPort: 7779
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blindspot-api
  namespace: blindspot-prod
  labels: { version: "1" }
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: https://blindspot.pinkstack.com";
      more_set_headers "Access-Control-Allow-Methods: *";
      more_set_headers "Access-Control-Allow-Headers: *";
      more_set_headers "Access-Control-Expose-Headers: Content-Length,Content-Range";
spec:
  ingressClassName: nginx
  rules:
    - host: blindspot-api.pinkstack.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blindspot-api
                port: { number: 80 }
